# CubeEngine

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
CubeEngine.xcodeproj/: project.pbxproj
CubeEngine.xcodeproj/project.xcworkspace/xcuserdata/caoyasong1949.xcuserdatad/: UserInterfaceState.xcuserstate
CubeEngine.xcodeproj/project.xcworkspace/xcuserdata/deertuliang.xcuserdatad/: UserInterfaceState.xcuserstate
CubeEngine.xcodeproj/xcshareddata/xcschemes/: CubeEngine.xcscheme
CubeEngine.xcodeproj/xcuserdata/caoyasong1949.xcuserdatad/xcschemes/: xcschememanagement.plist
CubeEngine.xcodeproj/xcuserdata/deertuliang.xcuserdatad/xcschemes/: xcschememanagement.plist
CubeEngine/Asset/Shaders/: PBRFragment.frag  PBRTextureFragment.frag  PBRTextureVertex.frag  phongDiffuseFragment.frag  phongDiffuseVertex.frag  simpleFragment.frag  simpleVertex.frag
CubeEngine/Engine/Sources/Programs/: main.cpp
CubeEngine/Engine/Sources/Runtime/Core/Application/: Application.cpp  Application.hpp  GlfwApplication.cpp  GlfwApplication.hpp
CubeEngine/Engine/Sources/Runtime/Core/Object/: Entity.cpp  Entity.hpp  World.cpp  World.hpp
CubeEngine/Engine/Sources/Runtime/Core/Object/Components/: CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  LightingComponent.cpp  LightingComponent.hpp  MeshRenderComponent.cpp  MeshRenderComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
CubeEngine/Engine/Sources/Runtime/Core/Object/Systems/: CameraSystem.cpp  CameraSystem.hpp  LightingSystem.cpp  LightingSystem.hpp  MeshRenderSystem.cpp  MeshRenderSystem.hpp  System.cpp  System.hpp
CubeEngine/Engine/Sources/Runtime/Core/Prefab/Material/: PBRMaterial.cpp  PBRMaterial.hpp  PBRTextureMaterial.cpp  PBRTextureMaterial.hpp  PhongDiffuseMaterial.cpp  PhongDiffuseMaterial.hpp  SimpleMaterial.cpp  SimpleMaterial.hpp
CubeEngine/Engine/Sources/Runtime/Core/Prefab/Mesh/: Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp  SphereModel.cpp  SphereModel.hpp  Triangle.cpp  Triangle.hpp
CubeEngine/Engine/Sources/Runtime/Core/Renderer/: IndexBufferObject.cpp  IndexBufferObject.hpp  Material.cpp  Material.hpp  MaterialProperty.cpp  MaterialProperty.hpp  RenderObject.cpp  RenderObject.hpp  RenderPass.cpp  RenderPass.hpp  RenderState.cpp  RenderState.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  UniformBinder.cpp  UniformBinder.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  VertexData.cpp  VertexData.hpp
CubeEngine/Engine/Sources/Runtime/Utils/: Camera.cpp  Camera.hpp  LinkedList.cpp  LinkedList.hpp
data/: sceneconverter.json  sceneconverter_bak.json
data/shaders/: InfinitePlane.frag  InfinitePlane.vert  Triangle.vert  VK01.frag  VK01.vert  VK01PBR.frag  VK02.vert
data/shaders/Common/: GridCalculation.h  MaterialData.h  VK01.h
samples/: CMakeLists.txt
samples/HelloTriangle/: CMakeLists.txt
samples/HelloTriangle/src/: main.cpp
samples/LargeScene/: CMakeLists.txt
samples/LargeScene/src/: main.cpp
samples/SceneGraph/: CMakeLists.txt
samples/SceneGraph/src/: main.cpp
src/framework/: Barriers.h  CMakeLists.txt  CompositeRenderer.h  CubeRenderer.cpp  CubeRenderer.h  GuiRenderer.cpp  GuiRenderer.h  InfinitePlaneRenderer.cpp  InfinitePlaneRenderer.h  LineCanvas.cpp  LineCanvas.h  MultiRenderer.cpp  MultiRenderer.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.h  TriangleRenderer.cpp  TriangleRenderer.h  VulkanApp.cpp  VulkanApp.h  VulkanResources.cpp  VulkanResources.h  VulkanShaderProcessor.cpp  VulkanShaderProcessor.h
src/framework/effects/: HDRProcessor.h  LuminanceCalculator.h  SSAOProcessor.h
src/scene/: CMakeLists.txt  Cameras.h  Material.cpp  Material.h  MergeUtil.cpp  MergeUtil.h  Scene.cpp  VtxData.cpp  VtxData.h
src/utils/: CMakeLists.txt  Camera.h  Utils.cpp  Utils.h  UtilsCubemap.cpp  UtilsVulkan.cpp  UtilsVulkan.h
tools/: CMakeLists.txt
tools/SceneConvert/: CMakeLists.txt
tools/SceneConvert/src/: main.cpp
